@@ -1,12 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST raspberrypi-firmware-6cc27e02dd.tar.gz 112272395 SHA256 c94f28a6c952c87d85bf04ac3f671781f83c4f90b793f8d00a093df34c23f8a7 SHA512 9f77031232d62f450e8db321fdddac52d276f7a560cdd1fb5e9cab57d4f096ff06f7f228420fb78b25382be493f438b6aad6efd8aeb1cec8605f24ff6dcab3c3 WHIRLPOOL 94623a3ae5394435c2317c8fb1716eaa7247b6208e5cff545bee996713bdeb7ade833c9ed9a20e58c124dc068feb11cfef108720786491d652baf9a883fa20c4
 DIST raspberrypi-firmware-9e9acf8978.tar.gz 94626824 SHA256 4e7e9e725fa805bba481ec04428922146993b3b6755d0e091b2c14a33ca5702f SHA512 5de5056263f3b55ab107134f320b8d6ecbbeb9c1e649c027a6e8daed190589e1c4816b6bf41cfc6c7555df1673bb7888b3042cb612aa55f0e503a85db184e477 WHIRLPOOL 3106784be9c4147ae7ee81492bc87a85133a71e1dbf5a4a5abaf4bbfca2ef24eda95cd865c700b9885293397d7b7486f206c79de50035edb566e807df34ac77d
 DIST raspberrypi-firmware-ba8059e890.tar.gz 93890924 SHA256 fadc9c1eae192d214cce1e3870f46d3a251acce3df901cc9bb80f24feebc9090 SHA512 1ca799b9c61f1ac3b149b64b30b75643597c2829d5b15053f02004a692bae570e157f06c51d295f5951462558a65ad9e126c59255e956595e0740965c8615a97 WHIRLPOOL 37a1fd034f722925f5d5fc0a40b5f882ca414bbc889d5da1a187e05745ec171dbd00dde0271231b88698cd9e7952fb48011dc726adbe00f33bf4d9d5b0da41b8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2
 
-iF4EAREIAAYFAlHm8LMACgkQknrdDGLu8JBiXQEAja6f2w+rCxQ36n+OFCWSFQkh
-alKxgGNXJno8h0EawYkA/AlIYS2hIfI5o9ksZpaR7rtcvdjll2fvFgjDyZe57q62
-=v5ju
+iF4EAREIAAYFAlU5VDIACgkQknrdDGLu8JBuFAD9Htlgkz1PUJg1vGvlVYuQQU+o
+kfE4ax+4lQb5Rz6mPL0A/0PH8yOGhYvDuDo7F+8Tx+60vNW6zzQh7zUmW3OVUCi+
+=E9SB
 -----END PGP SIGNATURE-----
