@@ -1,3 +1,9 @@
+*raspberrypi-userland-bin-1_pre20150421 (23 Apr 2015)
+
+  23 Apr 2015; Michael Weber <xmw@gentoo.org>
+  +raspberrypi-userland-bin-1_pre20150421.ebuild:
+  Version bump
+
   17 Jul 2013; Michael Weber <xmw@gentoo.org>
   raspberrypi-userland-bin-0_p20130711.ebuild,
   raspberrypi-userland-bin-1_pre20130715.ebuild:
